--- a/HomePage_Receive.html
+++ b/HomePage_Receive.html
@@ -40,26 +40,98 @@
   <tr>
     <td width="25%" align="center"><p><img src="picture/Sent.png" width="250" height="240" alt="" /></p>
     <p class="menu">Sent</p></td>
-    <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form1" name="form1" method="post" action="">
-      <p><img src="picture/book.png" width="500" height="446" /> </p>
-      <p>
-        <label for="Job"></label>
-        <input type="text" name="Job" id="Job" />
-      </p>
-      <p>
-  <input type="submit" name="Sent.J" id="Sent.J" value="ส่ง" />
-      </p>
-    </form></td>
-    <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form2" name="form2" method="post" action="">
-    <p><img src="picture/megaphone.png" width="497" height="446" /> </p>
-      <p>
-        <label for="Anou"></label>
-        <input type="text" name="Anou" id="Anou" />
-      </p>
-      <p>
-        <input type="submit" name="Sent.A" id="Sent.A" value="ส่ง" />
-    </p>
-    </form></td>
+    <td width="50%" rowspan="2" valign="top"><table width="100%" height="100%" border="0">
+      <tr>
+        <td class="menu"><table width="100%" border="0" class="menu">
+            <tr>
+              <td>1. Test Work 1</td>
+            </tr>
+            <tr>
+              <td><hr /></td>
+            </tr>
+          </table></td>
+      </tr>
+      <tr valign="top" >
+        <td><table width="100%" border="0" align="center" class="UnderDetail">
+          <tr class="Detail">
+            <td>ชื่อ-นามสกุล</td>
+            <td>ไฟล์ที่แนบมา</td>
+            <td>เวลาที่ส่ง</td>
+            <td>คะแนนที่ได้</td>
+            <td>ตรวจแล้ว</td>
+          </tr>
+          <tr>
+            <td colspan="5"><hr></td>
+            </tr>
+          <tr>
+            <td class="name">1.ธนศักดิ์ มนทิรมาโนชญ์</td>
+            <td>รายงาน 1</td>
+            <td>23.00</td>
+            <td>4/5</td>
+            <td>ตรวจแล้ว</td>
+          </tr>
+          <tr>
+            <td class ="name">2.วัชรินทร์ เวียงวิเศษ</span></td>
+            <td>รายงาน a</span></td>
+            <td>23.55</span></td>
+            <td>-</td>
+            <td>ยังไม่ตรวจ</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+        </table></td>
+      </tr>      
+    </table></td>
+    <td width="25%" rowspan="2" valign="top" class="Header"><table width="100%" border="0">
+        <tr>
+          <td class="Header" valign="top">งานที่มอบหมาย<hr /></td>
+        </tr>
+        <tr>
+          <td height="100%" align="center"><p>1.Test work 1</p>
+          <p>2.Test work 2</p>
+          <p>3.Test work 3</p></td>
+        </tr>
+    </table></td>
   </tr>
   <tr>
     <td align="center"><p><img src="picture/Receive.png" width="250" height="216" /></p>
