--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -38,7 +38,7 @@
     <td height="100" colspan="3" class="Header" valign="middle">Learning Management System onn Line Application</td>
   </tr>
   <tr>
-    <td width="25%" align="center"><p><img src="picture/Sent.png" width="250" height="240" alt="" /></p>
+    <td width="25%" align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Sent.html"><img src="picture/Sent.png" width="250" height="240" alt="" /></a></p>
     <p class="menu">Sent</p></td>
     <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form1" name="form1" method="post" action="">
       <p><img src="picture/book.png" width="75%" height="75%" /> </p>
@@ -62,8 +62,8 @@
     </form></td>
   </tr>
   <tr>
-    <td align="center"><p><img src="picture/Receive.png" width="250" height="216" /></p>
-    <p class="menu">Receive</p></td>
+    <td align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Receive.html"><img src="picture/Receive.png" width="250" height="216" /></a></p>
+</td>
   </tr>
 </table>
 </body>
