--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>LMS-Line</title>
 <style type="text/css">
 .Header {
 	font-size: larger;
@@ -35,7 +35,7 @@
 <body>
 <table width="100%" height="100%" border="1">
   <tr valign="top" >
-    <td height="100" colspan="3" class="Header" valign="middle">Learning Management System onn Line Application</td>
+    <td height="100" colspan="3" class="Header" valign="middle">Learning Management System on Line Application</td>
   </tr>
   <tr>
     <td width="25%" align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Sent.html"><img src="picture/Sent.png" width="250" height="240" alt="" /></a></p>
