--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -63,7 +63,7 @@
   </tr>
   <tr>
     <td align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Receive.html"><img src="picture/Receive.png" width="250" height="216" /></a></p>
-</td>
+    <p class="menu">Receive</p></td>
   </tr>
 </table>
 </body>
