--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -4,6 +4,31 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>LMS-Line</title>
 <style type="text/css">
+input[type=text]{
+  width: 75%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 50%;
+  background-color: #3F3;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #393;
+}
+
 .Header {
 	font-size: larger;
 	text-align: center;
@@ -44,20 +69,20 @@
       <p><img src="picture/book.png" width="75%" height="75%" /> </p>
       <p>
         <label for="Job"></label>
-        <input type="text" name="Job" id="Job" />
+        <input type="text" name="Job" id="Job" placeholder="งานที่ต้องการมอบหมาย" />
       </p>
       <p>
-  <input type="submit" name="Sent.J" id="Sent.J" value="ส่ง" />
+  <input type="submit" name="Sent.J" id="Sent.J" value="มอบหมายงาน" />
       </p>
     </form></td>
     <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form2" name="form2" method="post" action="">
     <p><img src="picture/megaphone.png" width="75%" height="75%" /> </p>
       <p>
         <label for="Anou"></label>
-        <input type="text" name="Anou" id="Anou" />
+        <input type="text" name="Anou" id="Anou" placeholder="Input Anouncement to broadcast" />
       </p>
       <p>
-        <input type="submit" name="Sent.A" id="Sent.A" value="ส่ง" />
+        <input type="submit" name="Sent.A" id="Sent.A" value="Broadcast" />
     </p>
     </form></td>
   </tr>
