--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -79,7 +79,7 @@ input[type=submit]:hover {
     <p><img src="picture/megaphone.png" width="75%" height="75%" /> </p>
       <p>
         <label for="Anou"></label>
-        <input type="text" name="Anou" id="Anou" placeholder="Input Anouncement to broadcast" />
+        <input type="text" name="Anou" id="Anou" placeholder="Input announcement to broadcast" />
       </p>
       <p>
         <input type="submit" name="Sent.A" id="Sent.A" value="Broadcast" />
