--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -25,6 +25,10 @@ input[type=submit] {
   cursor: pointer;
 }
 
+input[type=text]:focus{
+	border: 1px solid #555;
+}
+
 input[type=submit]:hover {
   background-color: #393;
 }
@@ -63,10 +67,10 @@ input[type=submit]:hover {
     <td height="100" colspan="3" class="Header" valign="middle">Learning Management System on Line Application</td>
   </tr>
   <tr>
-    <td width="25%" align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Sent.html"><img src="picture/Sent.png" width="250" height="240" alt="" /></a></p>
+    <td width="25%" align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Sent.html"><img src="picture/Sent.png" width="250" height="240" title="SentPage" /></a></p>
     <p class="menu">Sent</p></td>
     <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form1" name="form1" method="post" action="">
-      <p><img src="picture/book.png" width="75%" height="75%" /> </p>
+      <p><img src="picture/book.png"/book.png" width="77%" height="77%" /> </p>
       <p>
         <label for="Job"></label>
         <input type="text" name="Job" id="Job" placeholder="งานที่ต้องการมอบหมาย" />
@@ -79,7 +83,7 @@ input[type=submit]:hover {
     <p><img src="picture/megaphone.png" width="75%" height="75%" /> </p>
       <p>
         <label for="Anou"></label>
-        <input type="text" name="Anou" id="Anou" placeholder="Input announcement to broadcast" />
+        <input type="text" name="Anou" id="Anou" placeholder="Input Anouncement to broadcast" />
       </p>
       <p>
         <input type="submit" name="Sent.A" id="Sent.A" value="Broadcast" />
@@ -87,7 +91,7 @@ input[type=submit]:hover {
     </form></td>
   </tr>
   <tr>
-    <td align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Receive.html"><img src="picture/Receive.png" width="250" height="216" /></a></p>
+    <td align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Receive.html"><img src="picture/Receive.png" width="250" height="216" title="ReceivePage" /></a></p>
     <p class="menu">Receive</p></td>
   </tr>
 </table>
