--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -10,7 +10,7 @@ input[type=text]{
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 20px;
   box-sizing: border-box;
 }
 
@@ -21,7 +21,7 @@ input[type=submit] {
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
-  border-radius: 4px;
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -79,7 +79,8 @@ input[type=submit]:hover {
   <input type="submit" name="Sent.J" id="Sent.J" value="มอบหมายงาน" />
       </p>
     </form></td>
-    <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form2" name="form2" method="post" action="">
+    <td width="37.5%" rowspan="2" valign="top" align="center">
+    <form id="form2" name="form2" method="post" action="botbroadcast.php" method="post">
     <p><img src="picture/megaphone.png" width="75%" height="75%" /> </p>
       <p>
         <label for="Anou"></label>
