--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -80,7 +80,7 @@ input[type=submit]:hover {
       </p>
     </form></td>
     <td width="37.5%" rowspan="2" valign="top" align="center">
-    <form id="form2" name="form2" method="post" action="botbroadcast.php" method="post">
+    <form id="form2" name="form2" method="post" action="https://chatcedkmutnb1.herokuapp.com/botbroadcast.php" method="post">
     <p><img src="picture/megaphone.png" width="75%" height="75%" /> </p>
       <p>
         <label for="Anou"></label>
