--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -67,7 +67,7 @@ input[type=submit]:hover {
     <td height="100" colspan="3" class="Header" valign="middle">Learning Management System on Line Application</td>
   </tr>
   <tr>
-    <td width="25%" align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Sent.html"><img src="picture/Sent.png" width="50%" height="50%" title="SentPage" /></a></p>
+    <td width="25%" align="center"><p><a href="HomePage_Sent.html"><img src="picture/Sent.png" width="50%" height="50%" title="SentPage" /></a></p>
     <p class="menu">Sent</p></td>
     <td width="37.5%" rowspan="2" valign="top" align="center"><form id="form1" name="form1" method="post" action="">
       <p><img src="picture/book.png"/book.png" width="77%" height="77%" /> </p>
