--- a/HomePage_Sent.html
+++ b/HomePage_Sent.html
@@ -58,13 +58,22 @@ input[type=submit]:hover {
 }
 </style>
 
-
+<script type="text/javascript" src="Time.js"></script>
 </head>
 
 <body>
 <table width="100%" height="100%" border="1">
   <tr valign="top" >
-    <td height="100" colspan="3" class="Header" valign="middle">Learning Management System on Line Application</td>
+    <td height="100" colspan="3" class="Header" valign="middle"><table width="100%" height="100%" border="0">
+        <tr>
+          <td align="right"><span id="date_time"></span>
+            <script type="text/javascript">window.onload = date_time('date_time');</script>
+            </td>
+        </tr>
+        <tr>
+          <td height="100" colspan="3" class="Header" valign="middle">Learning Management System on Line Application</td>
+        </tr>
+    </table></td>
   </tr>
   <tr>
     <td width="25%" align="center"><p><a href="HomePage_Sent.html"><img src="picture/Sent.png" width="50%" height="50%" title="SentPage" /></a></p>
@@ -89,7 +98,8 @@ input[type=submit]:hover {
       <p>
         <input type="submit" name="Sent.A" id="Sent.A" value="Broadcast" />
     </p>
-    </form></td>
+    </form>
+    </td>
   </tr>
   <tr>
     <td align="center"><p><a href="https://chatcedkmutnb1.herokuapp.com/HomePage_Receive.html"><img src="picture/Receive.png" width="50%" height="50%" title="ReceivePage" /></a></p>
